--- a/modal-map.html
+++ b/modal-map.html
@@ -194,6 +194,29 @@
                                                       <div class="map-random__modal-map-wrapper">
                                                             <div class="map-random__modal-map-container">
                                                                   <div class="map-random__modal-popup">
+                                                                        <form class="map-random__modal-popup-form">
+                                                                              <label
+                                                                                    class="map-random__modal-popup-headline">Введите
+                                                                                    почту</label>
+                                                                              <input type="text" name="email"
+                                                                                    placeholder="Эл. почта"
+                                                                                    class="map-random__modal-popup-input">
+
+                                                                        </form>
+                                                                        <div
+                                                                              class="map-random__modal-popup-button-container">
+                                                                              <button
+                                                                                    class="map-random__modal-popup-button1"
+                                                                                    type="button"
+                                                                                    value="create">Создать</button>
+                                                                              <button
+                                                                                    class="map-random__modal-popup-button2"
+                                                                                    type="button"
+                                                                                    value="cancel">Отмена</button>
+                                                                        </div>
+                                                                        <button
+                                                                              class="map-random__modal-popup-closebutton"
+                                                                              type="button" value="close"></button>
 
                                                                   </div>
 
