иконочный шрифт и модальные окна полностью

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <meta name="description" content="">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>stride-design-system/typography</title>
 </head>
