--- a/form-elements.html
+++ b/form-elements.html
@@ -9,8 +9,7 @@
       <meta name="description" content="">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>stride-design-system/fotm-elements</title>
 </head>
@@ -85,44 +84,48 @@
                                     <caption class="form-elements__field-style-headline">Поля</caption>
                                     <tr class="form-elements__field-style-ordinary">
                                           <td class="form-elements__field-style-name">Обычное</td>
-                                          <td class="form-elements__field-ordinary">
-                                                <label class="form-elements__field-ordinary-label">Лейбл</label><input
-                                                      class="form-elements__field-ordinary-input1" type="text"
-                                                      placeholder="Заглушка">
+                                          <td>
+                                                <form action="" class="form-elements__field-ordinary" method="POST">
+                                                      <label
+                                                            class="form-elements__field-ordinary-label">Лейбл</label><input
+                                                            class="form-elements__field-ordinary-input1" type="text"
+                                                            placeholder="Заглушка">
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-ordinary">
+                                                <form action="" class="form-elements__field-ordinary" method="POST">
                                                       <label
                                                             class="form-elements__field-ordinary-label">Лейбл</label><input
                                                             class="form-elements__field-ordinary-input2"
                                                             placeholder="Заглушка" type="text">
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-success">
                                           <td class="form-elements__field-style-name">Успех</td>
                                           <td>
-                                                <div class="form-elements__field-success">
+                                                <form action="" class="form-elements__field-success" method="POST">
                                                       <label
                                                             class="form-elements__field-success-label">Лейбл</label><input
                                                             class="form-elements__field-success-input1" type="text"
                                                             placeholder="Заглушка">
                                                       <div class="form-elements__field-success-text">Успешно</div>
-                                                </div>
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-success"><label
+                                                <form action="" class="form-elements__field-success" method="POST">
+                                                      <label
                                                             class="form-elements__field-success-label">Лейбл</label><input
                                                             class="form-elements__field-success-input2" type="text"
                                                             placeholder="Заглушка">
                                                       <div class="form-elements__field-success-text">Успешно</div>
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-warning">
                                           <td class="form-elements__field-style-name">Предупреждение</td>
                                           <td>
-                                                <div class="form-elements__field-warning">
+                                                <form class="form-elements__field-warning">
                                                       <label
                                                             class="form-elements__field-warning-label">Лейбл</label><input
                                                             class="form-elements__field-warning-input1" type="text"
@@ -130,92 +133,96 @@
                                                       <div class="form-elements__field-warning-text">Предупреждение
                                                       </div>
 
-                                                </div>
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-warning"><label
+                                                <form class="form-elements__field-warning"><label
                                                             class="form-elements__field-warning-label">Лейбл</label><input
                                                             class="form-elements__field-warning-input2" type="text"
                                                             placeholder="Заглушка">
                                                       <div class="form-elements__field-warning-text">Предупреждение
                                                       </div>
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-error">
                                           <td class="form-elements__field-style-name">Ошибка</td>
                                           <td>
-                                                <div class="form-elements__field-error"><label
+                                                <form class="form-elements__field-error"><label
                                                             class="form-elements__field-error-label">Лейбл</label><input
                                                             class="form-elements__field-error-input1" type="text"
                                                             placeholder="Заглушка">
                                                       <div class="form-elements__field-error-text">Ошибка</div>
-                                                </div>
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-error"><label
+                                                <form class="form-elements__field-error"><label
                                                             class="form-elements__field-error-label">Лейбл</label><input
                                                             class="form-elements__field-error-input2" type="text"
                                                             placeholder="Заглушка">
                                                       <div class="form-elements__field-error-text">Ошибка</div>
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-blocked">
                                           <td class="form-elements__field-style-name">Заблокированно</td>
                                           <td>
-                                                <div class="form-elements__field-blocked"><label
+                                                <form class="form-elements__field-blocked"><label
                                                             class="form-elements__field-blocked-label">Лейбл</label><input
                                                             class="form-elements__field-blocked-input1" type="text"
                                                             placeholder="Заглушка" disabled>
-                                                </div>
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-blocked"><label
+                                                <form class="form-elements__field-blocked"><label
                                                             class="form-elements__field-blocked-label">Лейбл</label><input
                                                             class="form-elements__field-blocked-input2" type="text"
                                                             placeholder="Заглушка" disabled>
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-icon">
                                           <td class="form-elements__field-style-name">С иконкой</td>
                                           <td>
-                                                <div class="form-elements__field-icon"><label
+                                                <form action="" class="form-elements__field-icon" method="POST"><label
                                                             class="form-elements__field-icon-label">Лейбл</label><input
                                                             class="form-elements__field-icon-input1" type="text"
                                                             placeholder="Заглушка">
-                                                </div>
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class=" form-elements__field-icon"><label
+                                                <form action="" class="form-elements__field-icon" method="POST"><label
                                                             class="form-elements__field-icon-label">Лейбл</label><input
                                                             class="form-elements__field-icon-input2" type="text"
                                                             placeholder="Заглушка">
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class=" form-elements__field-style-button">
                                           <td class="form-elements__field-style-name">С кнопкой</td>
                                           <td>
-                                                <div class="form-elements__field-button"><label
+                                                <form action="" class="form-elements__field-button" method="POST"><label
                                                             class="form-elements__field-button-label">Лейбл</label><input
                                                             class="form-elements__field-button-input1" type="text"
                                                             placeholder="Заглушка">
-                                                </div>
+                                                      <input type="submit" name="submit" value="ok"
+                                                            class="form-elements__input1-button">
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-button"><label
+                                                <form action="" class="form-elements__field-button" method="POST"><label
                                                             class="form-elements__field-button-label">Лейбл</label><input
                                                             class="form-elements__field-button-input2" type="text"
                                                             placeholder="Заглушка">
-                                                </div>
+                                                      <input type="submit" name="submit" value="ok"
+                                                            class="form-elements__input2-button">
+                                                </form>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-text">
                                           <td class="form-elements__field-style-name">Текстовое поле</td>
                                           <td>
-                                                <div class="form-elements__field-text">
+                                                <form action="" class="form-elements__field-text" method="POST">
                                                       <div class="form-elements__field-text-wrapper"><label
                                                                   class="form-elements__field-text-label">Лейбл</label>
                                                             <div class="form-elements__field-text-min">Минимум 50
@@ -225,10 +232,10 @@
                                                             placeholder="Заглушка"></textarea>
                                                       <div class="form-elements__field-text-text">Это обязательное поле
                                                       </div>
-                                                </div>
+                                                </form>
                                           </td>
                                           <td>
-                                                <div class="form-elements__field-text">
+                                                <form action="" class="form-elements__field-text" method="POST">
                                                       <div class="form-elements__field-text-wrapper"><label
                                                                   class="form-elements__field-text-label">Лейбл</label>
                                                             <div class="form-elements__field-text-min">Минимум 50
@@ -238,7 +245,7 @@
                                                             placeholder="Заглушка"></textarea>
                                                       <div class="form-elements__field-text-text">Это обязательное поле
                                                       </div>
-                                                </div>
+                                                </form>
                                           </td>
                                     </tr>
 
@@ -304,7 +311,7 @@
                                           <td>
                                                 <div class="form-elements__select-blocked">
                                                       <label class="form-elements__select-blocked-label">Лейбл</label>
-                                                      <select class="form-elements__field-blocked-select1">
+                                                      <select class="form-elements__field-blocked-select1" disabled>
                                                             <option>Выберите...</option>
                                                             <option>Первый</option>
                                                             <option>Второй</option>
@@ -315,7 +322,7 @@
                                           <td>
                                                 <div class="form-elements__select-blocked">
                                                       <label class="form-elements__select-blocked-label">Лейбл</label>
-                                                      <select class="form-elements__field-blocked-select2">
+                                                      <select class="form-elements__field-blocked-select2" disabled>
                                                             <option>Выберите...</option>
                                                             <option>Первый</option>
                                                             <option>Второй</option>
