сладер без js и одна карточка

--- a/blocks.html
+++ b/blocks.html
@@ -111,6 +111,102 @@
                         </section>
                         <section class="blocks__more">
                               <h2 class="blocks__headline">Остальное</h2>
+                              <section class="blocks__more-sliders-block">
+                                    <h3 class="blocks__more-slider-name">Слайдер с отзывами</h3>
+                                    <div class="more-slider__container">
+                                          <div class="more-slider__wrapper">
+                                                <div class="more-slider__slider1">
+                                                      <p class="more-slider__slider1-text">«Речь зашла об одном из
+                                                            соседних помещиков. «Дрянь,
+                                                            аристократишко»,– равнодушно заметил Базаров, который
+                                                            встречался с ним в Петербурге. Речь зашла об одном из
+                                                            соседних помещиков.</p>
+                                                      <div class="more-slider__slider1-autor"><img
+                                                                  class="more-slider__slider1-autor-img"
+                                                                  src="img/avatar-black.svg" width="50" height="50">
+                                                            <p class="more-slider__slider1-autor-name">Иван Тургенев,
+                                                                  заслуженный
+                                                                  критик</p>
+                                                      </div>
+
+                                                </div>
+                                                <div class="more-slider__slider2">
+                                                      <p class="more-slider__slider1-text">«Речь зашла об одном из
+                                                            соседних помещиков. «Дрянь,
+                                                            аристократишко»,– равнодушно заметил Базаров, который
+                                                            встречался с ним в Петербурге. Речь зашла об одном из
+                                                            соседних помещиков.</p>
+                                                      <div class="more-slider__slider1-autor"><img
+                                                                  class="more-slider__slider1-autor-img"
+                                                                  src="img/avatar-black.svg" width="50" height="50">
+                                                            <p class="more-slider__slider1-autor-name">Иван Тургенев,
+                                                                  заслуженный
+                                                                  критик</p>
+                                                      </div>
+
+                                                </div>
+
+                                          </div>
+                                          <div class="more-slider__button-wrapper">
+                                                <button class="more-slider__button-back" type="button"
+                                                      value="button"><span class="visually-hidden">назад</span></button>
+                                                <button class="more-slider__button-forward" type="button"
+                                                      value="button"><span
+                                                            class="visually-hidden">вперед</span></button>
+
+                                          </div>
+
+                                    </div>
+                              </section>
+                              <section class="block__more-tariff">
+                                    <h3 class="blocks__more-tariff-name">Тарифы</h3>
+                                    <div class="more-tariff__container">
+                                          <div class="more-tariff__free">
+                                                <div class="more-tariff__free-header">
+                                                      <h4 class="more-tariff__free-headline">Бесплатно</h4>
+                                                      <b class="more-tariff__free-price">0 ₽</b>
+                                                      <p class="more-tariff__free-notice">3 пользователя</p>
+                                                </div>
+                                                <ul class="more-tariff__free-list">
+                                                      <li class="more-tariff__free-list-item">Печеньки</li>
+                                                      <li class="more-tariff__free-list-item">Фишки</li>
+                                                      <li class="more-tariff__free-list-item">Чаек</li>
+                                                      <li class="more-tariff__free-list-item">Вкусняшки</li>
+                                                </ul>
+                                                <button class="more-tariff__free-button">Выбрать тариф</button>
+                                          </div>
+                                          <div class="more-tariff__premium">
+                                                <div class="more-tariff__premium-header">
+                                                      <h4 class="more-tariff__premium-headline">Премиум</h4>
+                                                      <b class="more-tariff__premium-price">10 000 ₽</b>
+                                                      <p class="more-tariff__premium-notice">10 пользователей</p>
+                                                </div>
+                                                <ul class="more-tariff__premium-list">
+                                                      <li class="more-tariff__premium-list-item">Печеньки</li>
+                                                      <li class="more-tariff__premium-list-item">Фишки</li>
+                                                      <li class="more-tariff__premium-list-item">Чаек</li>
+                                                      <li class="more-tariff__premium-list-item">Вкусняшки</li>
+                                                </ul>
+                                                <button class="more-tariff__premium-button">Выбрать тариф</button>
+                                          </div>
+                                          <div class="more-tariff__unlimited">
+                                                <div class="more-tariff__unlimited-header">
+                                                      <h4 class="more-tariff__unlimited-headline">Безлимит</h4>
+                                                      <b class="more-tariff__unlimited-price">90 000 ₽</b>
+                                                      <p class="more-tariff__unlimited-notice">10 пользователей</p>
+                                                </div>
+                                                <ul class="more-tariff__unlimited-list">
+                                                      <li class="more-tariff__unlimited-list-item">Печеньки</li>
+                                                      <li class="more-tariff__unlimited-list-item">Фишки</li>
+                                                      <li class="more-tariff__unlimited-list-item">Чаек</li>
+                                                      <li class="more-tariff__unlimited-list-item">Вкусняшки</li>
+                                                </ul>
+                                                <button class="more-tariff__unlimited-button">Выбрать тариф</button>
+                                          </div>
+
+                                    </div>
+
+                              </section>
                         </section>
                   </div>
             </main>
