карточки без иконок и разметка таблицы начало

--- a/blocks.html
+++ b/blocks.html
@@ -158,7 +158,7 @@
 
                                     </div>
                               </section>
-                              <section class="block__more-tariff">
+                              <section class="blocks__more-tariff">
                                     <h3 class="blocks__more-tariff-name">Тарифы</h3>
                                     <div class="more-tariff__container">
                                           <div class="more-tariff__free">
@@ -203,9 +203,67 @@
                                                 </ul>
                                                 <button class="more-tariff__unlimited-button">Выбрать тариф</button>
                                           </div>
-
                                     </div>
-
+                              </section>
+                              <section class="blocks__more-table">
+                                    <h3 class="blocks__more-table-name">Таблица</h3>
+                                    <table class="more-table">
+                                          <caption class="more-table__name">Название таблицы</caption>
+                                          <thead class="more-table__header">
+                                                <td class="more-table__header-name">№</td>
+                                                <td class="more-table__header-name">Название</td>
+                                                <td class="more-table__header-name">Цена</td>
+                                                <td class="more-table__header-name">Атрибут</td>
+                                                <td class="more-table__header-name">Клиент</td>
+                                                <td class="more-table__header-name">Действия</td>
+                                          </thead>
+                                          <tbody class="more-table__body">
+                                                <tr class="more-table__line">
+                                                      <td class="more-table__line-item">0145</td>
+                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
+                                                      </td>
+                                                      <td class="more-table__line-item">100 000 ₽</td>
+                                                      <td class="more-table__line-item">59083056</td>
+                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
+                                                      <td class="more-table__line-item"><button
+                                                                  class="more-table__line-button" type="submit"
+                                                                  value="submit">Выбрать</button></td>
+                                                </tr>
+                                                <tr class="more-table__line">
+                                                      <td class="more-table__line-item">0145</td>
+                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
+                                                      </td>
+                                                      <td class="more-table__line-item">100 000 ₽</td>
+                                                      <td class="more-table__line-item">59083056</td>
+                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
+                                                      <td class="more-table__line-item"><button
+                                                                  class="more-table__line-button" type="submit"
+                                                                  value="submit">Выбрать</button></td>
+                                                </tr>
+                                                <tr class="more-table__line">
+                                                      <td class="more-table__line-item">0145</td>
+                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
+                                                      </td>
+                                                      <td class="more-table__line-item">100 000 ₽</td>
+                                                      <td class="more-table__line-item">59083056</td>
+                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
+                                                      <td class="more-table__line-item"><button
+                                                                  class="more-table__line-button" type="submit"
+                                                                  value="submit">Выбрать</button></td>
+                                                </tr>
+                                                <tr class="more-table__line">
+                                                      <td class="more-table__line-item">0145</td>
+                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
+                                                      </td>
+                                                      <td class="more-table__line-item">100 000 ₽</td>
+                                                      <td class="more-table__line-item">59083056</td>
+                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
+                                                      <td class="more-table__line-item"><button
+                                                                  class="more-table__line-button" type="submit"
+                                                                  value="submit">Выбрать</button></td>
+                                                </tr>
+                                          </tbody>
+                                    </table>
                               </section>
                         </section>
                   </div>
